public/static/other.css
/* ... */
.border-bottom-custom {
  border-bottom: var(--bs-card-border-width) solid var(--bs-card-border-color);
}

@media (min-width:767.98px) {
  .text-centertostart-md {
    text-align: left !important;
  }
  .text-centertostart-md {
    text-align: right !important;
	}
}

@media (min-width:991.98px) {
  .text-centertostart-lg {
    text-align: left !important;
  }
  .text-centertostart-lg {
    text-align: right !important;
	}
}

.text-centertostart-md, .text-centertostart-md, .text-centertostart-lg, .text-centertostart-lg {
	text-align: center;
}

@media (max-width:500px) {
   .dmsize {
      height: 350px;
   }
}

@media (min-width:767.98px) {
   .dmsize {
      height: 1366px !important;
   }
	.bd-toc {
		margin-top: 0 !important;
	}
}

.dmsize {
  margin-top: 0.5rem;
  overflow: auto;
  text-align: left !important;
  height: 350px;
}

.basics-scroll {
    height: 350px;
    overflow: auto;
    text-align: left !important;
}

@media (max-width:767.98px) {
	.basics-scroll {
	    margin-top: 0.5rem;
	}
}

@media (min-width: 500px) {
   .dmrow {
       --bs-gutter-x: 1.5rem;
       --bs-gutter-y: 0;
       display: flex;
       flex-wrap: wrap;
       margin-top: calc(-1 * var(--bs-gutter-y));
   }
}

.dmrow {
  margin-left: 10px;
  margin-right: 10px;
}

@media (max-width:767.98px) {
	.disbr {
		display: none;
	}
}

@media (max-width:991.98px) {
	.imgdiv {
		width: 30%;
		margin-left: auto;
		margin-right: auto;
	}
}


@media (max-width:1000px) {
   .pdont {
      display:none;
    }
}

@media (max-width:1024px) {
   img.script, img.flash {
      width: 25.5%
   }
}

@media (max-width:425px) {
   img.script, img.flash {
      width: 33%
   }
}

@media (min-width: 645.98px) {
	.custom-lrpad {
		margin-left: 10px !important; 
		margin-right: 10px !important;
	}
}

@media (max-width:645.98px) {
   .nolrpadding {
		margin-left: 0 !Important;
		margin-right: 0 !important;
   }
}

.modal .btn {
  padding: var(--bs-btn-padding-y) var(--bs-btn-padding-x) !important;
}

#404 {
  text-align: center !important;
}

.modal {
  text-align: left !important;
}

.icon-bar a {
	display: inline-block;
}

@media (max-width:767.98px) {
  .icon-bar {
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:767.98px) {
  .padright {
	margin-right: 5px;
  }
  
  .padleft {
	margin-left: 5px;
  }
}
      

.sw-feature-box {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	background-color: grey;
	padding: 10px;
	border: 1px solid black;
}

.sw-link {
	color: white !important;
	text-align: center !important;
}
.sw-link:hover, .sw-link:active, .sw-link:focus {
	color: wheat !important;
}

.footer-info {
  text-decoration: none;
  color: var(--bs-body-color);
    border: none;
    background-color: inherit;
    margin-bottom: initial;
    padding: initial;
	flex-direction: initial;
	display: inline !important;
}

footer p {
  margin-bottom: 0!important;
}

a:hover.footer-info {
  color: #696969;
}

[data-bs-theme=dark] a:hover.footer-info {
  color: #FAF9F6;
}

body.fixedtopnav {
  padding-top: 56px;
}

html.fixedtopnav {
  scroll-padding-top: 61px;
}

body.fixedtopnavimage {
  padding-top: 71px;
}

html.fixedtopnavimage {
  scroll-padding-top: 76px;
}

.modal-body-title, .title {
    padding-top: .625rem;
}

.main-navbar {
	& {
	  --bs-bg-opacity: 1;
	  background-color: rgba(var(--bs-tertiary-bg-rgb), var(--bs-bg-opacity)) !important;
		box-shadow: 0 0.5rem 1rem rgba(255, 255, 255, 0.15), inset 0 -1px 0 rgba(0, 0, 0, 0.15) !important;
	}

	[data-bs-theme=dark] & {
	--bs-bg-opacity: 1;
	  background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
	  box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.15), inset 0 -1px 0 rgba(255,255,255,0.15) !important;
	}
	
	[data-bs-theme="dark"] &.shadow {
	  box-shadow: 0 0.25rem 0.5rem rgba(0,0,0,0.15), inset 0 -1px 0 rgba(255,255,255,0.15) !important;
	}
	
	[data-bs-theme="dark"] &.shadow-sm {
	  box-shadow: 0 0.125rem 0.25rem rgba(0,0,0,0.15), inset 0 -1px 0 rgba(255,255,255,0.15) !important;
	}
	
	[data-bs-theme="dark"] &.shadow-lg {
	  box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.15), inset 0 -1px 0 rgba(255,255,255,0.15) !important;
	}
	
	[data-bs-theme="dark"] &.shadow-xlg {
	  box-shadow: 0 1rem 3rem rgba(0,0,0,0.15), inset 0 -1px 0 rgba(255,255,255,0.15) !important;
	}
	
	&.shadow {  
		box-shadow: 0 0.25rem 0.5rem rgba(255,255,255,0.15), inset 0 -1px 0 rgba(0,0,0,0.15) !important;
	}
	
	&.shadow-sm {
	  box-shadow: 0 0.125rem 0.25rem rgba(255,255,255,0.15), inset 0 -1px 0 rgba(0,0,0,0.15) !important;
	}
	
	&.shadow-lg {
		 box-shadow: 0 0.5rem 1rem rgba(255,255,255,0.15), inset 0 -1px 0 rgba(0,0,0,0.15) !important;
	}
		
	&.shadow-xlg {
		 box-shadow: 0 1rem 3rem rgba(255,255,255,0.15), inset 0 -1px 0 rgba(0,0,0,0.15) !important;
	}
}
/* ... */

